--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BattleTanks" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Base.Theme.BattleTanks" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.BattleTanks" parent="Base.Theme.BattleTanks" />
 </resources>
